--- a/styles.css
+++ b/styles.css
@@ -153,6 +153,10 @@ footer{
 
 /*Responsive*/
 @media (max-width: 768px) {
+	header {
+        position: static;
+    }
+	
     .divisionVertical {
         flex-direction: column;
     }
@@ -178,5 +182,6 @@ footer{
     }
 
 }
+
 
 
