--- a/styles.css
+++ b/styles.css
@@ -153,7 +153,7 @@ footer{
 
 /*Responsive*/
 @media (max-width: 768px) {
-	header {
+	.header {
         position: static;
     }
 	
@@ -182,6 +182,7 @@ footer{
     }
 
 }
+
 
 
 
